--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ annotated-types==0.7.0
 attrs==25.3.0
 certifi==2025.4.26
 colorama==0.4.6
+dotenv==0.9.9
 frozenlist==1.7.0
 idna==3.10
 magic-filter==1.0.12
