--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ aiosignal==1.3.2
 annotated-types==0.7.0
 attrs==25.3.0
 certifi==2025.4.26
+charset-normalizer==3.4.2
 colorama==0.4.6
 dotenv==0.9.9
 frozenlist==1.7.0
@@ -17,8 +18,10 @@ py-mon==2.1.0
 pydantic==2.11.5
 pydantic_core==2.33.2
 python-dotenv==1.1.0
+requests==2.32.4
 typing-inspection==0.4.1
 typing_extensions==4.14.0
+urllib3==2.4.0
 watchdog==6.0.0
 yarl==1.20.1
 yt-dlp==2025.6.9
